# ZenQube

./: CMakeLists.txt  DEPLOY.md  Makefile  PLATFORM_NOTES.md  README.md  build.py  cli.py  code_analyzer.py  requirements.txt  run.py  sandbox  sandbox.c  sandbox_test_gui.py  test_phase2.py  test_sandbox.py  web_dashboard.py
examples/: hello_python.py
templates/: dashboard.html
tests/: file_size_test.c  fork_bomb.c  infinite_loop.c  memory_hog.c
uploads/: Q1_bccb444b6a7047ff8aa78c7dae0c4a9f.c  Q3_051bbf5beb0043b188473407d856cd79.c  armstrong_8d150f15cdaa4c25925eb6616b6771b2.c
uploads/build_15f107c93c1a4d548b3c80edbebed983/: Q1_9fbeb674de1a464c8fe358d8a2141d40
uploads/build_3427ffb42c004f07b11d66728c149be2/: Q1_153172af9fd94e29b06ddd28095e296b
uploads/build_63a64f54f5f1457b97c03e91808fa8c0/: Q1_643207a1b5c643649e1eee6f84ef717d
uploads/build_6589c1b1fd3249768fde89ff32e4fae0/: Q1_0bea3306a8734d10b05dce9880e72ef8
uploads/build_664b778f6f564af8a3189de1cf8f1d5b/: Q1_28d4115aa37e4d14ae5b77bfea86ef28
uploads/build_75d0362f32674a4698411cd968e33658/: Q3_051bbf5beb0043b188473407d856cd79
uploads/build_8c120a6bdabc4c7a96271c443d550035/: Q1_bccb444b6a7047ff8aa78c7dae0c4a9f
uploads/build_deebc54d2251498da882463d74ebdcb3/: armstrong_8d150f15cdaa4c25925eb6616b6771b2
